# TruthEngine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  test.db  truthengine.db
.github/workflows/: ci.yml
docs/: AGENT_CONTEXT_LOG.md  AI_HANDOFF.md  HANDOFF.md  PRODUCT_ARCHITECTURE_REVIEW.md  PROJECT_MEMORY.md  README.md  TRUTHENGINE_ARCHITECTURE_REVIEW.md  TRUTHENGINE_ENGINEERING_VISION.md  TRUTHENGINE_SOFTWARE_ARCHITECTURE.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx
frontend/src/core/: api.ts  providers.tsx
migrations/: README.md  env.py
migrations/versions/: 20260717_0001_create_investigations.py  20260717_0002_create_timeline_events.py  20260717_0003_create_investigation_plans.py  20260717_0004_create_evidence_graphs.py  20260717_0005_create_sources_and_snapshots.py  20260717_0006_create_document_segments_and_passages.py  20260717_0007_add_original_html_to_snapshots.py
searxng/: README.md  settings.yml
src/: README.md
src/truthengine/: README.md  __init__.py  main.py
src/truthengine/api/: README.md  __init__.py  health.py  router.py
src/truthengine/core/: README.md  __init__.py  config.py  database.py  di.py  exception_handlers.py  logging.py  middleware.py  request_context.py
tests/: README.md  conftest.py  test_candidates.py  test_graphs.py  test_health.py  test_investigations.py  test_planning.py  test_sources.py
(+55 files in other folders)
