[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "truthengine"
version = "0.1.0"
description = "Production backend foundation for TruthEngine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "trafilatura>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<5.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.6,<1.0",
    "types-psycopg2>=2.9,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/truthengine"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "N",
    "PT",
    "S",
    "UP",
    "W",
]
ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["truthengine"]
files = ["src", "tests"]
